--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-flask==2.2.3
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-Migrate==3.1.0
+Flask-Session==0.4.0
+Flask-WTF==1.0.0
+Flask-Limiter==2.4.0
+cryptography==36.0.1
+requests==2.27.1
+python-dotenv==0.19.2
 gunicorn==20.1.0
-requests==2.28.2
-python-dotenv==1.0.0
+Werkzeug==2.0.2
+Jinja2==3.0.3
+SQLAlchemy==1.4.29
+itsdangerous==2.0.1
